--- a/Cloudental-cdi/src/main/webapp/screens/base/header.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/header.xhtml
@@ -20,8 +20,8 @@
 			   </h:panelGrid>
 			</h:panelGrid>
 			<p:breadCrumb>  
-			    <p:menuitem value="Office Area" action="office" ajax="false" styleClass="button"/>
-	            <p:menuitem value="Reception Area" action="reception" ajax="false" styleClass="button"/>
+			    <p:menuitem value="My Office" action="office" ajax="false" styleClass="button"/>
+	            <p:menuitem value="Preferences " action="reception" ajax="false" styleClass="button"/>
 	            <p:menuitem value="Pharmacy Area" action="pharmacy" ajax="false" styleClass="button"/>
 			</p:breadCrumb>
     	</h:form>
